--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Aymeric Bizouarn
+title: Bizouarn
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://bizouarn.github.io" # the base hostname & protocol for your site
+url: "http://git.bizouarn.com" # the base hostname & protocol for your site
 github_username:  bizouarn
 
 # Build settings
