--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,7 +30,9 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v1
       - name: bundle install
-        run:  bundle install
+        run:   |
+              gem install bundler:1.17.3
+              bundle install
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
