--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/configure-pages@v1
       - name: bundle install
         run:   |
-              gem install bundler:1.17.3
+              sudo gem install bundler:1.17.3
               bundle install
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
