--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,11 +30,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v1
       - name: bundle install
-        run:   |
-              sudo gem install bundler:1.17.3
-              bundle install
       - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
+        uses: bizouarn/jekyll-build-pages@latest
         with:
           source: ./
           destination: ./_site
