✨ New page site

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,2 @@
-_site/favicon.ico
-_site/feed.xml
-_site/index.html
-_site/main.css
-_site/redirects.json
-_site/CDN/sign.js
-_site/about/index.html
-_site/assets/css/style.css
-_site/coin/index.html
-_site/coin/logo.gif
-_site/coin/style.css
-_site/geojson/arrondissements-avec-outre-mer.geojson
-_site/geojson/arrondissements-version-simplifiee.geojson
-_site/geojson/arrondissements.geojson
-_site/geojson/cantons-avec-outre-mer.geojson
-_site/geojson/cantons-version-simplifiee.geojson
-_site/geojson/cantons.geojson
-_site/geojson/com.geojson
-_site/geojson/communes-version-simplifiee.geojson
-_site/geojson/departements-version-simplifiee.geojson
-_site/geojson/departements.geojson
-_site/geojson/regions-version-simplifiee.geojson
-_site/geojson/regions.geojson
-_site/geojson/world.json
-_site/hk/cp.csv
-_site/hk/Screenshot_2020-12-03 Metabase.png
-_site/img/hours_per_day_food_fish_creek.png
-_site/img/hours_per_day_food_hemple_bay.png
-_site/node-scripts/gen.js
+.sass-cache/*
+_site/*
