--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v1
       - name: Build with Jekyll
-        uses: action/jekyll-build-pages@latest
+        uses: actions/jekyll-build-pages@v1
         with:
           source: ./
           destination: ./_site
