🔧 Move domain git.bizouarn.com to bizouarn.com

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Bizouarn
 email: aymeric@bizouarn.fr
 baseurl: ""
-url: "http://git.bizouarn.com"
+url: "https://bizouarn.com"
 github_username:  bizouarn
 twitter_username: aymericbizouarn
 gitlab_username: bizouarn
