--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,7 +4,10 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
+  workflow_run:
+    workflows: ["Update GitHub Data"]
+    types:
+      - completed
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
